# snap-plugin-lib-cpp

./: .gitignore  .pluginsync.yml  .travis.yml  CONTRIBUTING.md  Makefile.am  README.md  autogen.sh  configure.ac  readme.md
examples/: Makefile  README.md  run.sh  stream-rand.yml  task.json  task.yaml
examples/collector/: README.md
examples/collector/src/: Makefile  rando.cc  rando.h
examples/graffiti/src/: graffiti.cc  graffiti.h
examples/log/src/: log.cc  log.h
examples/processor/: README.md
examples/processor/src/: Makefile  graffiti.cc  graffiti.h
examples/publisher/: README.md
examples/publisher/src/: Makefile  log.cc  log.h
examples/rando/include/: rando.h
examples/rando/src/: rando.cc  rando.h
examples/stream-collector/: README.md
examples/stream-collector/src/: Makefile  rando.cc  rando.h
examples/streaming-collector/: README.md
examples/streaming-collector/src/: Makefile  rando.cc  rando.h
googletest/: Makefile
hack/: build.sh
include/snap/: config.h  metric.h  plugin.h
include/snap/proxy/: collector_proxy.h  plugin_proxy.h  processor_proxy.h  publisher_proxy.h
include/snap/rpc/: plugin.grpc.pb.h  plugin.pb.h
scripts/: Dockerfile.travis  common.sh  deps.sh  gather-coverage.sh  small.sh  test.sh
src/: Makefile.am
src/libsnap/: metric.cc  plugin.cc
src/libsnap/proxy/: collector_proxy.cc  plugin_proxy.cc  processor_proxy.cc  publisher_proxy.cc
src/libsnap/rpc/: plugin.grpc.pb.cc  plugin.pb.cc
src/snap/: config.cc  config.h  flags.cc  flags.h  grpc_export.cc  grpc_export.h  grpc_export_impl.h  lib_setup_impl.h  metric.cc  metric.h  options.cfg  plugin.cc  plugin.h
src/snap/proxy/: collector_proxy.cc  collector_proxy.h  plugin_proxy.cc  plugin_proxy.h  processor_proxy.cc  processor_proxy.h  publisher_proxy.cc  publisher_proxy.h  stream_collector_proxy.cc  stream_collector_proxy.h
src/snap/rpc/: plugin.grpc.pb.cc  plugin.grpc.pb.h  plugin.pb.cc  plugin.pb.h
test/: Makefile  collectorproxy_test.cc  config_test.cc  metric_test.cc  mocks.h  plugin_test.cc  processorproxy_test.cc  publisherproxy_test.cc  streamcollectorproxy_test.cc  test_main.cc
